  access under the Analysis menu in the model window)
- GUI interface to X-12-ARIMA: add more options to control
  the program's behavior
- GUI model specification dialog: add a "genr" button
- GUI, main window toolbar: add a button for direct access to
  native gretl databases
- Fix for multinomial logit: correct bias in favor of the
  base case in the reported fitted values ($yhat)
- Fix bug 3021540 (sorting dataset)
- Fix bug 3021854 (spreadsheet import with no numeric data)
- Fix bug 3050710 (build process: LDFLAGS not respected)
- Fix bug 3054932 (build process: libdir not used)
- Fix bug 3074946 (specific MA lags not remembered in ARMA GUI)
- Fix bug 3082926 (crash or bad session file when saving a 
  session containing models with missing observations)
- Fix crashing bug in Wilcoxon signed rank test
- Fix bug: adf test with --gls option: don't use too many
  pre-sample values for the detrending regression
- Fix bug: crash in GUI when estimation of a restricted VECM
  was not successfully completed
- Fix for OS X: we now support Ctrl-click as equivalent to
  right-click (for popup menus, etc.)
- Fix for finding user's customized LaTeX preamble file
- Fix: more rigorous detection of whether TeX output is PDF
  rather than DVI
- Traditional Chinese locale: encode text to CP950 for EMF
  files via gnuplot
- Drag-and-drop onto gretl main window: support database files
  (gretl native, RATS or PcGive) as well as regular data files
- Graphs in GUI: for plots that don't support the full graph
  editor, add a font selector
- Build: require libgmp (no longer an optional extra)
- Internals: modify GUI sources to ensure that gretl will build
  OK with the forthcoming GTK+ 3.0
- MS Windows: update Inno installer and add the officially
  recognized translations

2010-06-24 version 1.9.1
- New command: "makepkg", for command-line creation of gretl
  function packages (.gfn files)
- pdf, cdf and pvalue functions: add support for the
  Generalized Error distribution